2012-03-22  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (to_float): New static function.
	(divi): Uses to_float.
	(zerop, gt, lt, ge, le, expt): Floating support.
	(isqrt_fixnum): Static function renamed to sqroot_fixnum.
	(isqrt): Renamed to sqroot. Floating support.
	(evenp, oddp, exptmod, gcd): Work with integers, not floats.

	* eval.c (eval_init): intrinsic registration of sqrt follows rename of
	isqrt to sqroot.

	* lib.h (isqrt): Declaration replaced.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (divi): New function.

	* eval.c (eval_init): divi registered as / intrinsic.

	* lib.h (divi): Declared.

	* txr.1: divi added to stub heading.

	* txr.vim: / operator highlighted.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (mod): Floating support.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (trunc): Floating support.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (plus, minus, mul): Removing unnecessary type checks,
	which are already implied by the switch case.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Doc stubs for new functions floatp, integerp,
	float-str, int-flo and flo-int.

	* txr.vim: Highlighting for new functions.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile: link in -lm, which is needed now on some systems.

	* arith.c (plus, minus): Eliminated some unnecessary (double) casts.
	(abso, mul): Floating support.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (neg): Floating-point support.

	* parser.l: FLO and FLODOT cases had to be reordered because
	the lex trailing context counts as part of the match length,
	causing 3.0 to be matched as three characters with 0 as
	the trailing context. The cases are split up to eliminate
	a flex warning.

	* stream.c (vformat): Support bignum in floating point
	conversion. Bugfixes: floating point conversion was
	accessing obj->fl.n instead of using n.
	Changed some if/else ladders to switches.

2012-03-21  Kaz Kylheku  <kaz@kylheku.com>
